<resources>
    <string name="app_name">SecretSanta</string>
    <string name="login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_username">Username</string>
    <string name="hint_group_name">Group Name</string>
    <string name="member_limit">Member Limit</string>
    <string name="present_group">Group Details</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="btn_create_group">Create Group</string>
    <string name="btn_search_group">Search Group</string>
    <string name="btn_list_groups">List my groups</string>
    <string name="btn_welcome">Secret Santa Options:</string>
    <string name="btn_create">Create</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_group_options">GroupOptions</string>
    <string name="title_activity_create_group">CreateGroup</string>
</resources>
